aded a warning for low memory